--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
+.DS_Store
+/abbrev_defs
+ac-comphist.dat
 auto-save-list/
 backup/
 elpa/
 eshell/
+games/
 kkcrc
+recentf
 saved-places
-tramp
 session*
-/abbrev_defs
+srecode-map.el
+tramp
+url/
+/.python-environments/
+/.sx/
