Append to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
-places
-auto-save-list/*
+.DS_Store
+.python-environments
 .smex-items
+.sx
+SessionDesktop.el
+abbrev_defs
+ac-comphist.dat
+auto-save-list
+backup
+elpa
+eshell
+games
+places
+recentf
+saved-places
+settings
+srecode-map.el
+tramp
+url
